--- a/src/pages/Expenses.css
+++ b/src/pages/Expenses.css
@@ -108,6 +108,7 @@
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
